# hermit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.json  config_old.json  db.json  db_dep.json  db_old.json  future_ideas.md  main.py  readme.md  test.jinja2
.github/workflows/: rust.yml
docs/: asset-manifest.json  index.html  precache-manifest.31ac7d9c95ea35b951de3939576e02d0.js  precache-manifest.4638de66be7120dda3ec12de8f1bbde3.js  precache-manifest.6e8c7495d6eb5db623a3cae2be29d5ce.js  precache-manifest.b79f52214c4bdc1f97709b10ef66ca48.js  service-worker.js
gulkana/: Cargo.toml
gulkana/src/: commands.rs  datastructure.rs  errors.rs  iterators.rs  lib.rs  node.rs  opt_pair.rs  service.rs
gulkana/src/datastructure/: node.rs
gulkana/src/service/: commands.rs  iterators.rs
package/: setup.py
package/app/: .config.jinja2.swp  .main.py.swp  .users.py.swp  .views.py.swp  __init__.py  app.py  config.jinja2  config.json  config.py  global_data.py  home.jinja2  login.jinja2  main.py  playlists.jinja2  setup.jinja2  users.py  video.jinja2  videos.py  views.py
package/app.egg-info/: SOURCES.txt  requires.txt
react-app/: package-lock.json  package.json
react-app/src/: App.jsx  index.js
react-client/: .gitignore  index.js  package-lock.json  package.json
react-client/src/: App.js  PlaylistEdit.js  PlaylistList.js  PlaylistPlay.js  PlaylistThumbnailList.js  (+6 more)
src/: API.md  main.rs  state.rs
static/: index.css  playlists.js  test.html
templates/: home.jinja2  home.tpl  login.jinja2  playlists.jinja2  settings.jinja2  setup.jinja2  video.jinja2
(+25 files in other folders)
