[package]
name = "hermit-rust"
version = "0.1.3"
authors = ["nick <scifi6546@protonmail.com>"]
edition = "2018"

[dependencies]
openssl="*"
simple_logger = "1.5.0"
actix-web={version="1.0.9",features=["ssl"]}
actix-session="0.2.0"
actix-files="0.1.7"
serde={version="*", features=["derive"]}
serde_json="*"
rust-argon2="0.4.0"
rand="*"
log="*"
env_logger="*"
gulkana="1.2.8"
